--- a/style.css
+++ b/style.css
@@ -1074,6 +1074,96 @@ nav .fas{
         margin-left: 60px;
     }
 }
+@media (max-width: 768px) {
+  nav {
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    margin: 20px auto;
+    padding: 0 20px;
+  }
+  nav ul {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  nav ul li {
+    margin: 10px 0;
+  }
+  .header-text {
+    font-size: 18px;
+    margin: 20% 10px 0;
+    text-align: center;
+  }
+  .header-text h1 {
+    font-size: 36px;
+    line-height: 1.2;
+  }
+  .about-col-1 img,
+  .about-col-1 .front-face img,
+  .about-col-1 .back-face {
+    width: 100%;
+    margin: 0 auto;
+    height: auto;
+    border-radius: 15px;
+  }
+  .about-col-1 {
+    flex-basis: 100%;
+    margin-bottom: 30px;
+  }
+  .about-col-2 {
+    flex-basis: 100%;
+    text-align: center;
+  }
+  .tab-titles1,
+  .tab-titles2 {
+    flex-direction: column;
+    align-items: center;
+  }
+  .tab-links {
+    font-size: 20px;
+    margin: 10px 0;
+  }
+  .tab-contents ul li,
+  .tab-contents ul li span,
+  .tab-contents ul li a {
+    font-size: 18px;
+  }
+  .services-list {
+    grid-template-columns: 1fr;
+    padding: 0 20px;
+  }
+  .services-list div {
+    width: 100%;
+    margin: 10px 0;
+  }
+  .work h1 {
+    font-size: 32px;
+    text-align: center;
+    margin: 40px auto;
+  }
+  #portfolio {
+    flex-direction: column;
+    align-items: center;
+  }
+  #portfolio .card {
+    margin: 20px auto;
+  }
+  .contact-left,
+  .contact-right {
+    flex-basis: 100%;
+    padding: 0 20px;
+  }
+  form input,
+  form textarea {
+    font-size: 16px;
+  }
+  form .btn2 {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+}
+
  /* @media (min-width:601px) and (max-width:900px) {
     .contact-left,.contact-right{
         flex-basis: 80%;    
