--- a/style.css
+++ b/style.css
@@ -1000,193 +1000,129 @@ nav .fas{
         font-size: 42px;
     } 
 }
-@media (min-width:150px) and (max-width:300px){
-    .container nav{
-        margin-top: 40px;
-        margin-left: 45px;
-    }
-    .header-text{
-        display: grid;
-        margin-top: 40%;
-        font-size: 25px;
-        margin-left: 50px;
-        text-align: center;
-        align-items: center;
-        width: 285%;
-    }
-    .about-col-1 {
-        margin-left: 225px;
-    }
-    .about-col-2 .sub-title{
-        margin-top: 10%;
-        margin-left: -9px;
-    }
-    .about-col-2 .para{
-        color: #dfe8e8;
-        font-size: 22px;
-        width: 87%;
-        margin-left: 60px;
-    } 
-    .tab-contents ul li span{
-        font-size: 30px;
-    }
-    .tab-contents ul li {
-        font-size: 26px;
-    }
-    .tab-contents ul li a{
-        font-size: 26px;
-    }
-    
-    .para{
-        color: #aaffff;
-        background-color: #aaffff;
-    }
-    #services span {
-    color: rgb(255, 255, 255);
-    }
-    .sub-title1 {
-        max-width: 100%;
-        margin-left: -97px;
-        font-size: 48px;
-    }
-    .services-list{
-        margin-left: -40px;
-    }
-     .work h1{
-        font-size: 60px;
-        margin-bottom: 33px;
-        margin-left: 280px;
-        margin-top: 25%;
-    }
-    .container h1 span{
-        color: #ffffff;
-    }
-    .container h1 {
-        font-size: 60px;
-        margin-bottom: 33px;
-        margin-left: 205px;
-        margin-top: 25%;
-    }
-    form input,form textarea{
-        width: 160%;
-    }
-    form {
-        margin-left: 60px;
-    }
-}
-@media (max-width: 768px) {
+@media screen and (max-width: 700px) {
+  body {
+    overflow-x: hidden;
+  }
+
   nav {
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     width: 100%;
-    margin: 20px auto;
-    padding: 0 20px;
+    margin-left: 0;
   }
+
   nav ul {
+    display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    width: 100%;
   }
+
   nav ul li {
     margin: 10px 0;
   }
+
   .header-text {
-    font-size: 18px;
-    margin: 20% 10px 0;
+    font-size: 20px;
+    margin: 25% auto 0;
     text-align: center;
+    width: 90%;
   }
+
   .header-text h1 {
-    font-size: 36px;
-    line-height: 1.2;
+    font-size: 38px;
+    line-height: 1.3;
   }
-  .about-col-1 img,
-  .about-col-1 .front-face img,
-  .about-col-1 .back-face {
-    width: 100%;
-    margin: 0 auto;
-    height: auto;
-    border-radius: 15px;
-  }
-  .about-col-1 {
-    flex-basis: 100%;
-    margin-bottom: 30px;
-  }
+
+  .about-col-1,
   .about-col-2 {
     flex-basis: 100%;
-    text-align: center;
+    margin: 0 auto;
+    padding: 0 20px;
   }
+
+  .about-col-1 img,
+  .front-face img,
+  .back-face {
+    width: 100% !important;
+    margin: 0 auto;
+    border-radius: 15px;
+  }
+
   .tab-titles1,
   .tab-titles2 {
     flex-direction: column;
     align-items: center;
   }
+
   .tab-links {
     font-size: 20px;
     margin: 10px 0;
   }
+
   .tab-contents ul li,
-  .tab-contents ul li span,
-  .tab-contents ul li a {
-    font-size: 18px;
+  .tab-contents ul li span {
+    font-size: 16px;
+    text-align: left;
   }
+
+  #services {
+    padding: 30px;
+    margin: 0;
+  }
+
   .services-list {
     grid-template-columns: 1fr;
-    padding: 0 20px;
+    gap: 20px;
   }
-  .services-list div {
-    width: 100%;
-    margin: 10px 0;
-  }
+
   .work h1 {
-    font-size: 32px;
     text-align: center;
+    font-size: 36px;
     margin: 40px auto;
   }
+
   #portfolio {
     flex-direction: column;
     align-items: center;
   }
+
   #portfolio .card {
     margin: 20px auto;
+    width: 90%;
   }
+
+  #portfolio .card .face {
+    margin-left: 0;
+    width: 100% !important;
+  }
+
   .contact-left,
   .contact-right {
     flex-basis: 100%;
     padding: 0 20px;
   }
+
   form input,
   form textarea {
     font-size: 16px;
+    width: 100%;
   }
+
   form .btn2 {
-    margin-left: auto;
-    margin-right: auto;
+    margin: 20px auto;
     display: block;
+  }
+
+  .social-icons {
+    justify-content: center;
+  }
+
+  .popup {
+    width: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.1);
   }
 }
 
- /* @media (min-width:601px) and (max-width:900px) {
-    .contact-left,.contact-right{
-        flex-basis: 80%;    
-    }
-    .header-text{
-        font-size: 30px;
-      margin-left: 20px;
-    }
-    .header-text h1{
-      font-size: 40px;
-    }
-    .about-col-1 img{
-        width: 350px;
-        height: 570px;
-        margin-left: 25px;
-    }
-   
-    .about-col-1,.about-col-2{
-        flex-basis: 100%;
-        align-items: center;
-        margin-left: 55px;
-    }
-    .contact-right{
-      align-items: center;
-    }
-} */
